bfs: Query parser needs to filter out escape char.

* When escaping operator/quote characters, the character was properly
  ignored. However, the escape char was left in the string which
  altered the query.
* This fixes bug #10976.